// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Common/Logo Logo 1`] = `
"<div class=\\"css-znsoff\\">
  <svg
    viewBox=\\"0 0 33.787568 17.315006\\"
    class=\\"chakra-icon css-1nsz2z9\\"
  >
    <g>
      <text
        x=\\".021\\"
        y=\\"10.118\\"
      >
        YES
      </text>
      <text
        x=\\".042\\"
        y=\\"17.251\\"
      >
        THEORY
      </text>
      <text
        x=\\"-.489\\"
        y=\\"-27.315\\"
        transform=\\"rotate(90)\\"
        fill=\\"#0167ff\\"
      >
        FAM
      </text>
    </g>
  </svg>
</div>"
`;

exports[`Storyshots Common/Logo Logo White 1`] = `
"<div class=\\"css-1ya4nun\\">
  <svg
    viewBox=\\"0 0 33.787568 17.315006\\"
    class=\\"chakra-icon css-1nsz2z9\\"
  >
    <g>
      <text
        x=\\".021\\"
        y=\\"10.118\\"
      >
        YES
      </text>
      <text
        x=\\".042\\"
        y=\\"17.251\\"
      >
        THEORY
      </text>
      <text
        x=\\"-.489\\"
        y=\\"-27.315\\"
        transform=\\"rotate(90)\\"
        fill=\\"white\\"
      >
        FAM
      </text>
    </g>
  </svg>
</div>"
`;

exports[`Storyshots Common/Logo Logos 1`] = `
"<div class=\\"chakra-stack css-owjkmg\\">
  <div class=\\"chakra-stack css-1ofz3wq\\">
    <div class=\\"css-znsoff\\">
      <svg
        viewBox=\\"0 0 33.787568 17.315006\\"
        class=\\"chakra-icon css-1nsz2z9\\"
      >
        <g>
          <text
            x=\\".021\\"
            y=\\"10.118\\"
          >
            YES
          </text>
          <text
            x=\\".042\\"
            y=\\"17.251\\"
          >
            THEORY
          </text>
          <text
            x=\\"-.489\\"
            y=\\"-27.315\\"
            transform=\\"rotate(90)\\"
            fill=\\"#0167ff\\"
          >
            FAM
          </text>
        </g>
      </svg>
    </div>
    <div class=\\"css-1btwv0h\\">
      <svg
        viewBox=\\"0 0 33.787568 17.315006\\"
        class=\\"chakra-icon css-1nsz2z9\\"
      >
        <g>
          <text
            x=\\".021\\"
            y=\\"10.118\\"
          >
            YES
          </text>
          <text
            x=\\".042\\"
            y=\\"17.251\\"
          >
            THEORY
          </text>
          <text
            x=\\"-.489\\"
            y=\\"-27.315\\"
            transform=\\"rotate(90)\\"
            fill=\\"#0167ff\\"
          >
            FAM
          </text>
        </g>
      </svg>
    </div>
    <div class=\\"css-1bvkrzq\\">
      <svg
        viewBox=\\"0 0 33.787568 17.315006\\"
        class=\\"chakra-icon css-1nsz2z9\\"
      >
        <g>
          <text
            x=\\".021\\"
            y=\\"10.118\\"
          >
            YES
          </text>
          <text
            x=\\".042\\"
            y=\\"17.251\\"
          >
            THEORY
          </text>
          <text
            x=\\"-.489\\"
            y=\\"-27.315\\"
            transform=\\"rotate(90)\\"
            fill=\\"#0167ff\\"
          >
            FAM
          </text>
        </g>
      </svg>
    </div>
  </div>
  <div class=\\"chakra-stack css-16qyr4m\\">
    <div class=\\"css-1ya4nun\\">
      <svg
        viewBox=\\"0 0 33.787568 17.315006\\"
        class=\\"chakra-icon css-1nsz2z9\\"
      >
        <g>
          <text
            x=\\".021\\"
            y=\\"10.118\\"
          >
            YES
          </text>
          <text
            x=\\".042\\"
            y=\\"17.251\\"
          >
            THEORY
          </text>
          <text
            x=\\"-.489\\"
            y=\\"-27.315\\"
            transform=\\"rotate(90)\\"
            fill=\\"white\\"
          >
            FAM
          </text>
        </g>
      </svg>
    </div>
    <div class=\\"css-1qs4zf\\">
      <svg
        viewBox=\\"0 0 33.787568 17.315006\\"
        class=\\"chakra-icon css-1nsz2z9\\"
      >
        <g>
          <text
            x=\\".021\\"
            y=\\"10.118\\"
          >
            YES
          </text>
          <text
            x=\\".042\\"
            y=\\"17.251\\"
          >
            THEORY
          </text>
          <text
            x=\\"-.489\\"
            y=\\"-27.315\\"
            transform=\\"rotate(90)\\"
            fill=\\"white\\"
          >
            FAM
          </text>
        </g>
      </svg>
    </div>
    <div class=\\"css-7rn6ev\\">
      <svg
        viewBox=\\"0 0 33.787568 17.315006\\"
        class=\\"chakra-icon css-1nsz2z9\\"
      >
        <g>
          <text
            x=\\".021\\"
            y=\\"10.118\\"
          >
            YES
          </text>
          <text
            x=\\".042\\"
            y=\\"17.251\\"
          >
            THEORY
          </text>
          <text
            x=\\"-.489\\"
            y=\\"-27.315\\"
            transform=\\"rotate(90)\\"
            fill=\\"white\\"
          >
            FAM
          </text>
        </g>
      </svg>
    </div>
  </div>
</div>"
`;
